<resources>
    <string name="app_name">EventsApp</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_heading">Find Amazing events happening around you</string>
    <string name="dashboard_sub_heading">480 events around you</string>
    <string name="search_bar_hint">Search for an event here...</string>
    <string name="dj_beach_resort">DJ Beach resort</string>

</resources>